--- a/App/package.json
+++ b/App/package.json
@@ -14,6 +14,8 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
